# fastapi-porject

./: Dockerfile  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  render.yaml
app/api/: routes_auth.py  routes_predict.py
app/cache/: redis_cache.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/middleware/: logging_middleware.py
app/models/: model.joblib
app/notebook/: sample.ipynb
app/services/: model_service.py
app/training/: train_model.py  train_utils.py
